# desktop-orgenizer

./: CMakeLists.txt  DesktopOverlayInstaller.iss  README.md  installer_script.nsi  main.cpp
src/: ClockWidget.cpp  ClockWidget.h  DataModels.h  DatabaseManager.cpp  DatabaseManager.h  DraggableToolbar.cpp  DraggableToolbar.h  HubWindow.cpp  HubWindow.h  IconData.cpp  IconData.h  IconManager.cpp  IconManager.h  IconWidget.cpp  IconWidget.h  MainWindow.cpp  MainWindow.h  PageData.cpp  PageData.h  PageManager.cpp  PageManager.h  PageTabContentWidget.cpp  PageTabContentWidget.h  Persistence.h  QuickAccessPanel.cpp  QuickAccessPanel.h  ThemeManager.cpp  ThemeManager.h  TodoData.h  TodoWidget.cpp  TodoWidget.h  WidgetHostWindow.cpp  WidgetHostWindow.h  ZoneData.cpp  ZoneData.h  ZoneWidget.cpp  ZoneWidget.h  imgui_impl_glfw.cpp  main.cpp
